--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'org.litepal.android:java:3.0.0'//数据库操作
+    implementation 'com.squareup.okhttp3:okhttp:3.3.1'//网络请求
+    implementation 'com.google.code.gson:gson:2.7'//解析JSON数据
+    implementation 'com.github.bumptech.glide:glide:3.7.0'//加载和展示图片
 }
